# std-bitcoin

./: .clang-format  .clang-tidy  .gitmodules  0-PRIMITIVES.md  1-PREDICATES.md  2-CHAIN.md  2-SERDES.md  3-CHAIN.md  CMakeLists.txt  README.md
.github/workflows/: pages.yml
include/: bitcoin.hpp  copy_on_write.hpp
include/bitcoin/: amount.hpp  any_chain_view.hpp  block.hpp  block_header.hpp  chain.hpp  chain_view.hpp  coin.hpp  coin_index.hpp  consensus_parameters.hpp  hash_id.hpp  predicates.hpp  script.hpp  transaction.hpp  utxo.hpp  validation.hpp  validation_flags.hpp  validation_result.hpp  validation_status.hpp
include/bitcoin/detail/: arrow_proxy.hpp  basic_hash_id.hpp  byte_sink_ref.hpp  chain_erasure.hpp  coin_index_ref.hpp  erasure.hpp  iterator.hpp  spent_coins_erasure.hpp
include/bitcoin/serdes/: byte_sink.hpp
include/bitcoin/serialization/: byte_sink.hpp
module/: bitcoin.amount.cpp  bitcoin.coin.cpp  bitcoin.consensus_parameters.cpp  bitcoin.cpp  bitcoin.hash_id.cpp  bitcoin.predicates.cpp  bitcoin.script.cpp  bitcoin.serdes.cpp  bitcoin.validation.cpp  bitcoin.vocabulary.cpp  copy_on_write.cpp
spec/: CHAIN.md  PREDICATES.md  SCRIPT.md  SERDES.md  VALIDATION.md  VOCABULARY.md
src/: amount.cpp  any_chain_view.cpp  basic_hash_id.cpp  block.cpp  block_header.cpp  chain.cpp  detail.hpp  hash_id.cpp  legacy.cpp  legacy.hpp  opcode.cpp  predicates.cpp  script.cpp  serdes_decode.cpp  serdes_decode.hpp  serdes_encode.cpp  serdes_encode.hpp  transaction.cpp  utxo.cpp  validate_block.cpp  validate_header.cpp  validate_script.cpp  validate_transaction.cpp  validation.cpp  validation_flags.cpp  validation_status.cpp  vocabulary_format.cpp
tests/: CMakeLists.txt  amount.cpp  block.cpp  chain.cpp  chain_view.cpp  coin.cpp  hash_id.cpp  hex.hpp  script.cpp  transaction.cpp  utxo.cpp  validation.cpp  validation_types.cpp
